<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">XQQ</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="onClick">onClick</string>
    <string name="string_again_touch_exit_message">再按一次退出</string>
    <string name="string_connect">连接中</string>
    <string name="string_exit">确定要退出程序?</string>
    <string name="string_ok">确定</string>
    <string name="string_cancel">取消</string>
    <string name="string_agree">同意</string>
    <string name="string_disagree">拒绝</string>
    <string name="string_login">登录</string>
    <string name="string_send">发送</string>
    <string name="string_register">注册</string>
    <string name="hint_username">用户账号</string>
    <string name="hint_userpwd">用户密码</string>
    <string name="hint_userpwd_confirm">再次确认密码</string>
    <string name="hint_host">服务器地址:www.ithtw.com</string>
    <string name="hint_port">服务器端口号:5222</string>
    <string name="hint_friend">查找其他用户</string>
    <string name="string_save">保存</string>
    <string name="string_search">搜索</string>
    <string name="string_add">添加</string>
    <string name="string_status_online">在线</string>
    <string name="string_status_offline">离线</string>
    <string name="string">XMPP:www.ithtw.com</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="string_chat_copy">复制文本</string>
    <string name="title_activity_splash">SplashActivity</string>

</resources>