<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black" >

    <ImageView
        android:id="@+id/head_bg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/top_radius"
        android:contentDescription="@string/app_name" />

    <Button
        android:id="@+id/option"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:background="@drawable/manage_accounts_icon"
        android:onClick="@string/onClick" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/string" />

</RelativeLayout>