<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        layout="@layout/head_layout" />

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        layout="@layout/bottom_layout" />

    <RelativeLayout
        android:id="@+id/register_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" >

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_username"
            android:inputType="text"
            android:singleLine="true" />

        <EditText
            android:id="@+id/userpwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_userpwd"
            android:inputType="textPassword"
            android:singleLine="true" />

        <EditText
            android:id="@+id/userpwd_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/userpwd"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_userpwd_confirm"
            android:inputType="textPassword"
            android:singleLine="true" />

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/userpwd_confirm"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_btn_default"
            android:onClick="@string/onClick"
            android:text="@string/string_register"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_default" />
    </RelativeLayout>

</RelativeLayout>