<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <include
        android:id="@+id/head_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        layout="@layout/head_layout" />

    <include
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        layout="@layout/bottom_layout" />

    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/head_layout"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp" >

        <EditText
            android:id="@+id/keyword"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/hint_friend"
            android:singleLine="true" />

        <Button
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_btn_default"
            android:onClick="@string/onClick"
            android:text="@string/string_search"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_default" />
    </LinearLayout>

    <ExpandableListView
        android:id="@+id/friends"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_layout"
        android:layout_below="@id/search_layout"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent" />

</RelativeLayout>